--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -3,18 +3,52 @@ The sidenav is not loaded by default on the main pages. To include this navigati
 _layouts/page.html layout template, or you can add "sidenav: true" in the front-matter of your pages
 {% endcomment %}
 
-
-{% assign pages_list = site.pages %}
-{% for node in pages_list %}
-  {% if node.title != null %}
-      {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
-      {% endif %}
-  {% endif %}
-{% endfor %}
-
-
 <aside class="usa-layout-docs-sidenav desktop:grid-col-3 padding-bottom-4">
+  <nav>
+    <ul class="usa-sidenav">
+      <li class="usa-sidenav__item"><a href="">Introduction</a></li>
+        {% for intro in site.introduction %}
+        <ul class="usa-sidenav__sublist">
+          <li class="usa-sidenav__item">
+            <a href="{{ intro.url }}">{{ intro.title }}</a>
+          </li>
+        </ul>  
+        {% endfor %}
+    </ul>
+    <ul class="usa-sidenav">
+      <li class="usa-sidenav__item"><a href="">Content types</a></li>
+        {% for type in site.content_types %}
+        <ul class="usa-sidenav__sublist">
+          <li class="usa-sidenav__item">
+            <a href="{{ type.url }}">{{ type.title }}</a>
+          </li>
+        </ul>  
+        {% endfor %}
+    </ul>
+    <ul class="usa-sidenav">
+      <li class="usa-sidenav__item"><a href="">Our approach</a></li>
+        {% for approach in site.our_approach %}
+        <ul class="usa-sidenav__sublist">
+          <li class="usa-sidenav__item">
+            <a href="{{ approach.url }}">{{ approach.title }}</a>
+          </li>
+        </ul>  
+        {% endfor %}
+    </ul>
+    <ul class="usa-sidenav">
+      <li class="usa-sidenav__item"><a href="">Our style</a></li>
+        {% for style in site.our_style %}
+        <ul class="usa-sidenav__sublist">
+          <li class="usa-sidenav__item">
+            <a href="{{ style.url }}">{{ style.title }}</a>
+          </li>
+        </ul>  
+        {% endfor %}
+    </ul>
+  </nav>
+</aside>  
+
+<!--<aside class="usa-layout-docs-sidenav desktop:grid-col-3 padding-bottom-4">
   <nav>
     <ul class="usa-sidenav">
       <li class="usa-sidenav__item">
@@ -59,4 +93,4 @@ _layouts/page.html layout template, or you can add "sidenav: true" in the front-
       </li>
     </ul>
   </nav>
-</aside>
+</aside>-->
