--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="tablet:grid-col">
           <div class="logo-links">
             <a class="footer-logo media_link" href="https://18f.gsa.gov">
-              {% asset logo-img.png width="50" alt="Agency logo" %}
+              {% asset 18F-logo.png width="50" alt="Agency logo" %}
             </a>
           </div>
         </div>
