initial theme files

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -1,6 +1,13 @@
 // Import the US Web Design System SASS.
+@import 'theme/uswds-theme-general';
+@import 'theme/uswds-theme-typography';
+@import 'theme/uswds-theme-spacing';
+@import 'theme/uswds-theme-color';
+@import 'theme/uswds-theme-utilities';
 
 @import "uswds";
+
+@import 'theme/uswds-theme-custom-styles';
 
 // Add your SASS/CSS here
 
@@ -34,4 +41,16 @@
   .paginate-button {
     display: block;
   }
+}
+
+/// Custom HTML adjustments
+
+.footer-logo__img {
+  vertical-align: top;
+  height: 60px;
+}
+
+.footer-logo__18f {
+  margin-top: 3px;
+  height:52px;
 }
