--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,3 +1,6 @@
 <div class="usa-logo" id="extended-logo">
-  <em class="usa-logo__text"><a href="{{site.baseurl}}/" title="Home" aria-label="Home">{{site.title}}</a></em>
+<a href="{{site.baseurl}}/" title="Home" aria-label="Home" class="display-inline-block">
+  <em class="usa-logo__text">
+    <span class="site-title display-inline-block">{{site.title}}</span>
+  </em></a>
 </div>
