--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -5,13 +5,14 @@ _layouts/page.html layout template, or you can add "sidenav: true" in the front-
 This version of the sidenav loops through each collection in the section folder and renders each markdown page. If you add a new markdown page to an existing folder, it will automatically render. If you add a new folder, you'll need to add it to collections in _config.yml and add a for loop for the collection below.
 {% endcomment %}
 
-{% assign collections = site.collections %}
+{% assign collections = site.collections | sort: 'sequence' %}
 
 {% comment %}Added, but titles for markdown files are not rendering{% endcomment %}
 <aside class="usa-layout-docs-sidenav desktop:grid-col-3 padding-bottom-4">
   <nav>
     <ul class="usa-sidenav">
       {% for collection in collections %}
+      {% unless collection.label == 'posts' %}
         <li class="usa-sidenav__item"><a href="">{{ collection.title }}</a></li>
         <ul class="usa-sidenav__sublist">  
           {% for doc in collection.docs %}
@@ -20,6 +21,7 @@ This version of the sidenav loops through each collection in the section folder 
               </li>
           {% endfor %}
         </ul>
+      {% endunless %}  
       {% endfor %}
     </ul>
   </nav>
