--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -16,7 +16,7 @@ This version of the sidenav loops through each collection in the section folder 
         <ul class="usa-sidenav__sublist">  
           {% for doc in collection.docs %}
               <li>
-                <a href="{{ doc.url }}" class="{% if doc.url == page.url %}usa-current{% endif %}">{{ doc.title }}</a>
+                <a href="{{ doc.url | relative_url }}" class="{% if doc.url == page.url %}usa-current{% endif %}">{{ doc.title }}</a>
               </li>
           {% endfor %}
         </ul>
