Expand link text for accessibility

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
           <div class="grid-col-12 tablet:grid-col-6">
             <div class="org-copy">
               {% if anchor.org_primary_bio %}
-                <p>{{ anchor.org_primary_bio }} <a class="more" href="{{ anchor.org_primary_url }}" title="Learn more about {{ anchor.org_primary }}">Read more</a></p>
+                <p>{{ anchor.org_primary_bio }} <a class="more" href="{{ anchor.org_primary_url }}" title="Learn more about {{ anchor.org_primary }}">Read more about TTS</a>.</p>
               {%endif %}
               {% if .org_secondary_bio %}
                 <p>{{ anchor.org_secondary_bio }} <a class="more" href="{{ anchor.org_secondary_url }}" title="Learn more about {{ anchor.org_secondary }}">Read more</a></p>
